syntax = "proto3";

package auth;

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "AuthProto";

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse { string msg = 1; }

message GetByIdRequest { string id = 1; }

message GetByIdResponse { User user = 1; }

message User {
  string id = 1;
  string username = 2;
  string role = 3;
}

message LogoutRequest { string refresh_token = 1; }

message LogoutResponse { bool success = 1; }

message RefreshRequest { string refresh_token = 1; }

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}